citizen science first pass

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -11,7 +11,28 @@ Vision Datasets}
 
 \section{What is ``Citizen-Science''?}
 
+Citizen-science is a form of crowdsourcing in which participants
+collect or analyze data. Typically, the tasks they perform are simple
+in nature. For example, they may be asked to take a photo, measure the 
+temperature, or translate text.
+
+This model is successful due to the ability of humans to perform such
+tasks extremely easily and in large numbers, often at little to no
+cost in time or effort. For a single research team to collect such
+large amounts of data on their own would be both costly and time
+consuming. Often, automating these tasks is impossible for computers,
+or is in fact the very aim of a projects principle investigators.
+
 \section{Why a Game?}
+
+people get bored when theres no payoff.
+
+people like games. 
+
+people like leaderboards (im number one! woo!)
+
+treating photohunter as a game, and abstacting the citizen-science out
+will keep people interested (longer)
 
 \section{What Are ``Computer Vision Datasets''?}
 
