Talking about mechanical turk

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -54,7 +54,15 @@ of the accompanying metadata.
 
 \section{Saving Money}
 
-mechanical turk pricing
+Researchers have approached dataset creation and labeling by using 
+Amazon Mechanical Turk in the past.  Mechanical Turk is a system where
+jobs can be posted for users to complete.  The users are given a small 
+amount of compensation for completing these tasks.  The downside to this
+for researchers is the requirement to fund the completion of the jobs
+that they post.  This costs the researchers money that could be used
+for other parts of their project instead of dataset creation.  While jobs
+can be posted for less than \$0.10, this can quickly add up when you have
+tens and even hundreds of thousands of jobs to fund.
 
 \section{PhotoHunter}
 
