--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -38,14 +38,13 @@ will keep people interested (longer)
 
 As in other fields related to Artificial Intelligence or Machine
 Learning, having data to train or test on is integral to the success
-of Computer Vision projects. In Computer Vision (often referred to as 
-``CV''), these datasets are collections of images or videos, each with
+of Computer Vision projects. In Computer Vision, these datasets are 
+collections of images or videos, each with
 associated metadata. For example, in \cite{islam2014geofaces} they
 propose a collection of front-facing facial images each with an
-accompanying latitude-longitude pair. Similarly, in \cite{X} they
-propose a collection of Y with assocated Z and W.
+accompanying latitude-longitude pair. 
 
-What both \cite{islam2014geofaces}, \cite{X}, an others have in common
+What \cite{islam2014geofaces} and many others have in common
 is the difficulty they experienced when collecting these datasets. In
 this document, and the following sections we will propose a system for
 reducing these difficulties by proposing a system for crowd-sourcing
@@ -96,5 +95,8 @@ Research groups will have an interface where they may request
 datasets. From this interface groups may define GPS bounding boxes,
 time frames, and other metadata they are interested in for a given
 dataset.
+
+\bibliographystyle{plain}
+\bibliography{biblio.bib}
 
 \end{document}
