--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
-\title{PhotoHunter: A Citizen-Scientist Game for Collecting Computer 
-Vision Datasets}
+\title{PhotoHunter: A Citizen-Scientist Game with User-in-the-loop 
+  Data Confirmation for Collecting Computer Vision Datasets}
 \author{Connor Greenwell \and Ryan Baltenberger 
   \and J.\ David Smith \and Aaron Bradshaw}
 
