EVEN better title

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
 
 \title{PhotoHunter: A Citizen-Scientist Game with User-in-the-loop 
-  Data Confirmation for Collecting Computer Vision Datasets}
+  Data Confirmation for Collecting Computer Vision Datasets of
+Geo-tagged Imagery through Crowd-Sourcing Data Collection}
 \author{Connor Greenwell \and Ryan Baltenberger 
   \and J.\ David Smith \and Aaron Bradshaw}
 
