--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -26,14 +26,18 @@ or is in fact the very aim of a projects principle investigators.
 
 \section{Why a Game?}
 
-people get bored when theres no payoff.
+One of the drawbacks of citizen-science style is the sharp fall-off in
+user contributions as the initial interest wears off. One way to
+mitigate this decline in contribution is to ``game-ify'' the process.
+By abstracting out the actual data collection and telling users they
+are participating in a global scale scavenger hunt, we expect that
+users will stay engaged and, more importantly, keep contribuing data
+for scientists to study.
 
-people like games. 
-
-people like leaderboards (im number one! woo!)
-
-treating photohunter as a game, and abstacting the citizen-science out
-will keep people interested (longer)
+Part of ``game-ify-ing'' PhotoHunter will involve assigning point
+values for both collecting and reviewing data. The users interaction
+with the website should be short, sweet, and rewarding. One of the
+ways to reward users is the use of a leaderboard.
 
 \section{What Are ``Computer Vision Datasets''?}
 
