--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -2,7 +2,9 @@
 
 \title{PhotoHunter: A Citizen-Scientist Game with User-in-the-loop 
   Data Confirmation for Collecting Computer Vision Datasets of
-Geo-tagged Imagery through Crowd-Sourcing Data Collection}
+  Geo-tagged Imagery through Crowd-Sourcing Data Collection; Abstracting
+  Research using an Interactive, Game-based Mobile Application for Large
+  Dataset Creation}
 \author{Connor Greenwell \and Ryan Baltenberger 
   \and J.\ David Smith \and Aaron Bradshaw}
 
