added link to github

--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -1,10 +1,17 @@
 \documentclass{article}
 
+\usepackage{hyperref}
+
 \title{PhotoHunter: A Citizen-Scientist Game with User-in-the-loop 
   Data Confirmation for Collecting Computer Vision Datasets of
   Geo-tagged Imagery through Crowd-Sourcing Data Collection; Abstracting
   Research using an Interactive, Game-based Mobile Application for Large
-  Dataset Creation}
+  Dataset Creation 
+  \footnote{Project location:
+    \url{https://github.com/connorgreenwell/PhotoHunter}
+  }
+}
+
 \author{Connor Greenwell \and Ryan Baltenberger 
   \and J.\ David Smith \and Aaron Bradshaw}
 
