--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -122,11 +122,11 @@ dataset.
     Domain Name(s) \tablefootnote{Based on prices from \url{namecheap.com}} & \$40 \\ \hline
     Virtual Machine Hosting \tablefootnote{Based on prices from \url{digitalocean.com}} & \$60 \\ \hline
     Google Play Store Publishing Fee \tablefootnote{\url{http://developer.android.com/distribute/googleplay/start.html}} & \$25 \\ \hline
-    Apple App Store Publishing Fee \tablefootnote{\url{https://developer.apple.com/programs/ios/}} & \$99 \\
-
+    Apple App Store Publishing Fee \tablefootnote{\url{https://developer.apple.com/programs/ios/}} & \$99 \\ \hline
+    Multi-Platform Software Framework \tablefootnote{Based on prices from \url{https://store.xamarin.com/}} & \$75 \\
     \hline    
     \hline
-    Total & \$??? \\
+    Total & \$299 \\
     \hline
   \end{tabular}
 \end{table}
