--- a/docs/requirements/req.tex
+++ b/docs/requirements/req.tex
@@ -202,7 +202,34 @@ another.
   users based on their cumulative points.
 	
 \subsection{Backend}
-INSERT STUFF HERE
+The backend of the PhotoHunter Project will manage the data between the different
+applications. The backend will use the data to generate databases for researchers
+using the PhotoHunter system from the web.
+
+        \subsubsection{Database Management}
+        The backend will take dataset requests from the web interface and update the
+        image database accordingly.
+
+        \subsubsection{Photo Retrieval}
+        The backend will receive images and metadata from the PhotoHunter application 
+        and store them in a database.
+
+        \subsubsection{Photo Posting}
+        The backend will provide images to the Quick Pic application from the database.
+
+        \subsubsection{Photo Selection}
+        The backend will choose photos to provide to Quick Pic based on the current 
+        information available for the photos, ensuring that sufficient data is collected
+        for each image.
+
+        \subsubsection{Photo Processing}
+        Based on the answers provided in the Quick Pic application, the backend will 
+        predict the correct label of the images in the database.
+
+        \subsubsection{Dataset Creation}
+        The backend will monitor the states of the dataset requests and the database 
+        and create the datasets once the requirements have been met. 
+
 
 \section{Interfaces}
 The PhotoHunter Project will have three central interfaces: two mobile
@@ -262,10 +289,17 @@ installation. The user will login to the site using any standard internet
 browser. The mobile applications will need to be downloaded from the Google
 Play App Store or the iTunes App Store, depending on the user's device.
 
-\section{Constraints}
+\section{Constraints/Risks}
+
+\subsection{Time}
+The PhotoHunter Project should be completed by the week of April 27th, 2015.
+
+\subsection{Memory}
+The PhotoHunter Project should be scalable enough to handle and process potentially
+thousands of images. There will be enough memory on the server to store these images
+and information about them.
 
 
-\section{Risks}
 
 %\bibliographystyle{plain}
 %\bibliography{biblio.bib}
