some changes to req doc apparently

--- a/docs/requirements/req.tex
+++ b/docs/requirements/req.tex
@@ -87,8 +87,8 @@ responsive design to accommodate users visiting on a mobile device's browser.
 
 \subsection{Mobile Application}
 The two mobile applications for the PhotoHunter Project will be developed with
-cross-platform tool, allowing the applications to be deployed to both iOS and
-Android devices. 
+cross-platform tool, allowing the applications to be deployed to the latest
+versions both iOS and Android devices. 
 
 \section{Architecture}
 
@@ -100,7 +100,7 @@ for different purposes.
 The web interface will allow researchers to specify an image dataset based on
 their needs. This specification is then used as a topic for the PhotoHunter
 mobile application. Researchers may also use the web interface retrieve their
-finalized dataset after the images have been labelled by the Quick Pick mobile
+finalized dataset after the images have been labelled by the Quick Pic mobile
 application. 
 
 \subsection{PhotoHunter}
