--- a/docs/requirements/req.tex
+++ b/docs/requirements/req.tex
@@ -295,15 +295,8 @@ Play App Store or the iTunes App Store, depending on the user's device.
 The PhotoHunter Project should be completed by the week of April 27th, 2015.
 
 \subsection{Memory}
-The PhotoHunter Project should be scalable enough to handle and process potentially
-thousands of images. There will be enough memory on the server to store these images
-and information about them.
-
-
-
-%\bibliographystyle{plain}
-%\bibliography{biblio.bib}
-
-%\appendix
+The PhotoHunter Project should be scalable enough to handle and process
+potentially thousands of images. There will be enough memory on the server to
+store these images and information about them.
 
 \end{document}
