--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -1,5 +1,8 @@
 \documentclass[aspectratio=169]{beamer}
 
+\usepackage{graphicx}
+\graphicspath{{./figs/}}
+
 \usetheme{Pittsburgh}
 
 \AtBeginSection{\frame{\sectionpage}}
@@ -24,6 +27,10 @@
 \section{Why a game?}
 
 \section{Backend}
+
+\begin{frame}
+  \includegraphics[width=\columnwidth]{researchers}
+\end{frame}
 
 \section{PhotoHunter}
 
