added mockups to quickpic

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -149,7 +149,14 @@
 \end{frame}
 
 \begin{frame}
-  \todo{mockups}
+  \begin{columns}[c]
+    \begin{column}{0.5\columnwidth}
+      \includegraphics[width=\columnwidth]{ss_quickpic_image}
+    \end{column}
+    \begin{column}{0.5\columnwidth}
+      \includegraphics[width=\columnwidth]{ss_quickpic_options}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \frame{\centering Thanks!}
