added photohunter mockups

--- a/docs/midterm_presentation/pres.tex
+++ b/docs/midterm_presentation/pres.tex
@@ -129,7 +129,14 @@
 \end{frame}
 
 \begin{frame}
-  \todo{mockups}
+  \begin{columns}[c]
+    \begin{column}{0.5\columnwidth}
+      \includegraphics[width=\columnwidth]{ss_photohunter_dataset}
+    \end{column}
+    \begin{column}{0.5\columnwidth}
+      \includegraphics[width=\columnwidth]{ss_photohunter_upload}
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \section{QuickPic}
